<?xml version="1.0"?>
<package format="2">
  <name>traj_replanning</name>
  <version>0.0.0</version>
  <description>The traj_replanning package</description>

  <maintainer email="tdinesh@seas.upenn.edu">Dinesh Thakur</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="tdinesh@seas.upenn.edu">Dinesh Thakur</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>angles</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>ewok_optimization</build_depend>
  <build_depend>ewok_poly_spline</build_depend>
  <build_depend>ewok_ring_buffer</build_depend>
  <build_depend>kr_mav_manager</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>ewok_optimization</build_export_depend>
  <build_export_depend>ewok_poly_spline</build_export_depend>
  <build_export_depend>ewok_ring_buffer</build_export_depend>
  <build_export_depend>kr_mav_manager</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>ewok_optimization</exec_depend>
  <exec_depend>ewok_poly_spline</exec_depend>
  <exec_depend>ewok_ring_buffer</exec_depend>
  <exec_depend>kr_mav_manager</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>


  <depend>actionlib</depend>
  <depend>visualization_msgs</depend>
  <depend>kr_replanning_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
